created list item option for student cards.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,6 +19,7 @@
       integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX"
       crossorigin="anonymous"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Quicksand&display=swap" rel="stylesheet">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js'></script>
     <!-- <script src="https://d3js.org/d3.v4.js"></script> -->
     <!--
